small paragraph spacing fix

--- a/main.css
+++ b/main.css
@@ -84,7 +84,9 @@ legend {
 }
 p {
     margin:0;
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 h1 {
     margin:10px;
